--- a/conf/application.conf
+++ b/conf/application.conf
@@ -371,5 +371,12 @@ db {
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
-  #default.logSql=true
+  default.logSql=true
 }
+
+slick.dbs.default.driver = "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost/play_db"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = ""
+slick.dbs.default.db.connectionTimeout = 3000
